<resources>
    <string name="app_name">ReceiptApp</string>
    <string name="no_network_available">Network connection unavailable,&#160;\n
        please connect Wi-Fi/Data plan.</string>
    <string name="connect_to_server_failure">The server you are trying to connect is down. We apologize and are working on fixing the issue.</string>
    <string name="post_get_general_error">Could not complete action successfully.</string>
    <string name="post_image_upload_error">Image upload failed.</string>
    <string name="get_image_download_error">Failed to download image.</string>
    <string name="image_location_is_blank">Receipt has no image.</string>
    <string name="image_added_to_queue">
        Image added to queue. Upload start
        automatically when network is available.
    </string>
    <string name="image_exists_in_queue">This image already exists in upload queue.</string>
    <string name="label_app_name">Receipts</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_log_in">Log In</string>
    <string name="label_password_recovery">Password Recovery</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="use_email">OR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="app_info_cnt_dscp">Park your receipts here</string>
    <string name="facebook_login_cnt_dscp">Login using your Facebook account</string>
    <string name="google_login_cnt_dscp">Login using your Google account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="use_social"> - Or Use Social Account - </string>
    <string name="forgot_password">Forgot Your Password</string>
    <string name="hint_name">First and Last name</string>
    <string name="age">Age</string>
    <string name="signup_term">Tapping \"Sign Up\" confirms that you agree to the Receiptofi &lt;a href=\'https://receiptofi.com/TermsOfUse\'&gt;Terms of use.&lt;/a&gt;</string>
    <string name="password_recovery">Send Recovery Email</string>
    <string name="password_recovery_social_failed">
        Could not send password recovery email.
        As you have signed up using Facebook or Google+.
    </string>
    <string name="password_recovery_message">
        An email has been sent to above email address with
        instructions on resetting your password.
    </string>
    <string name="take_photo">TAKE A PHOTO</string>
    <string name="view_receipt">VIEW RECEIPTS</string>
    <string name="choose_photo">CHOOSE PHOTO</string>
    <string name="monthly_amount" formatted="false">%s&#160;&#160;&#160;%s&#160;&#160;&#160;</string>
    <string name="processing_info" formatted="false">Receipts in-process %s</string>
    <string name="chart_desc">Receipt expense by business</string>
    <string name="chart_desc_short">
        Expenses By\n
        Business Name
    </string>
    <string name="empty_chart_text">No receipt for current month</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="preferences">Preferences</string>
    <string name="billing">Billing</string>
    <string name="expense_tag_info">Select any tag to modify</string>
    <string name="expense_tag_dialog_delete_label">Delete Expense Tag</string>
    <string name="expense_tag_dialog_text">
        Confirm delete tag \"%s\".\n\nDeleting the tag will
        delete all references from within receipts.
    </string>
    <string name="expense_tag_dialog_button_cancel">Cancel</string>
    <string name="expense_tag_dialog_button_delete">Delete</string>
    <string name="expense_tag_dialog_button_update">Update</string>
    <string name="expense_tag_dialog_button_add">Add</string>
    <string name="expense_tag_dialog_edit_label">Edit Expense Tag label or color</string>
    <string name="expense_tag_dialog_add_text">Add Expense Tag</string>
    <string name="billing_plan">Plan Subscribed</string>
    <string name="billing_history">Billing History</string>
    <string name="subscription_title">Select Plan</string>
    <string name="purchase_title">Purchase</string>
    <string name="purchase_confirmation_title">Confirmation</string>
    <string name="key_pref_preferences_id">key_pref_preferences_id</string>
    <string name="key_pref_sync">pref_sync</string>
    <string name="pref_sync">Wi-Fi Sync</string>
    <string name="pref_sync_on">Images syncs over Wi-Fi only.</string>
    <string name="pref_sync_off">Images syncs over Wi-Fi / Data.</string>
    <string name="key_pref_notification">pref_notification</string>
    <string name="pref_notification">Show Notification</string>
    <string name="pref_notification_on">App will post on notification bar.</string>
    <string name="pref_notification_off">App won\'t post on notification bar.</string>
    <string name="key_pref_login_id">pref_login_id</string>
    <string name="pref_login_title">Login Id</string>
    <string name="pref_login_change_title">Change Login Id</string>
    <string name="pref_login_message">
        To change your login, please enter your
        preferred valid email address below.
    </string>
    <string name="pref_login_social_message">
        Cannot change login id for your account.
        As you signed up using social login from Facebook or Google+.
    </string>
    <string name="key_pref_password">pref_password</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_change_title">Change Password</string>
    <string name="pref_password_text">********</string>
    <string name="pref_password_message">
        To change your password, please enter a new
        password below. Minimum length of %s characters.
    </string>
    <string name="pref_password_social_message">
        Cannot change password for your account.
        As you signed up using social login from Facebook or Google+.
    </string>
    <string name="key_pref_data_sync_id">pref_data_sync</string>
    <string name="pref_data_sync_title">Sync Data</string>
    <string name="pref_data_sync_summary" />
    <string name="pref_data_sync_message">Sync data to latest available update.</string>
    <string name="key_pref_data_delete_id">pref_data_delete</string>
    <string name="pref_data_delete_title">Delete App Data</string>
    <string name="pref_data_delete_summary" />
    <string name="pref_data_delete_message">
        Deletes all data within app, including user login information.
        This action will force you to logout from the app.
    </string>
    <string name="key_pref_update_id">pref_update</string>
    <string name="pref_update_title">Version: %s</string>
    <string name="pref_update_dialog_title">Upgrade To Version %s</string>
    <string name="pref_update_summary">Newer Version Available: %s</string>
    <string name="pref_update_message">
        Google play has latest available version.
        Would you prefer to go download from there?
    </string>
    <string name="key_pref_about_id">pref_about</string>
    <string name="pref_about_title">About ReceiptApp</string>
    <string name="pref_about_summary" />
    <string name="pref_about_message">
        ReceiptApp is built on the idea that receipt can be more intuitive, efficient, and useful. Easy
        to tag, expense, track purchases geographically in a fun way by digitizing your receipts.
    </string>
    <string name="receipt_list_header_month" formatted="false">%s (%d)</string>
    <string name="receipt_list_header_amount" formatted="false">%s</string>
    <string name="receipt_list_child_amount" formatted="false">%s</string>
    <string name="rd_item_quantity" formatted="false">%.2f @ %s each</string>
    <string name="rd_item_price" formatted="false">%s</string>
    <string name="rd_item_header_title">Item</string>
    <string name="rd_item_header_amount">Price</string>
    <string name="rd_item_header_tax_title">Tax</string>
    <string name="rd_item_header_total_title">Total</string>
    <string name="receipt_action_recheck_label">Data Mismatch</string>
    <string name="receipt_action_recheck">Verify receipt again</string>
    <string name="receipt_action_expense_tag_label">Expense Tag</string>
    <string name="receipt_action_note_label">Notes</string>
    <string name="receipt_action_note_hint">Add receipt notes here…</string>
    <string name="search_hint">Search by biz/item</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_receipt_actions">Receipt Actions</string>
    <string name="menu_logout">Logout</string>
    <string name="reminder_title">Set an alert for return/re-order of </string>
    <string name="reminder_cancel">Cancel</string>
    <string name="reminder_set">Set</string>
    <string name="event_title">Your reminder for </string>
    <string name="event_organizer">Receipts app - manage your receipt</string>
    <string name="event_description_1">You bought \"</string>
    <string name="event_description_2">\" from </string>
    <string name="event_description_3"> on </string>
    <string name="reminder_toast">Reminder is set for </string>
    <string name="notifications">Notifications</string>
    <string name="notify_empty_list">No receipts</string>
    <string name="notify_empty_notification_list">No notifications</string>
    <string name="notify_empty_detail">Choose month to view receipts</string>
    <string name="err_str_enter_name">Please enter a name.</string>
    <string name="err_str_enter_email">Please enter an email.</string>
    <string name="err_str_enter_password">Please enter a password.</string>
    <string name="err_str_enter_valid_email">Please enter a valid email.</string>
    <string name="err_str_enter_valid_password">Password must contain at least %s characters.</string>
    <string name="err_str_email_empty">Are you sure you provided email address?</string>
    <string-array name="age_range">
        <item>Select</item>
        <item>18-22</item>
        <item>22-25</item>
        <item>25-30</item>
        <item>30-35</item>
        <item>35-40</item>
        <item>40-45</item>
        <item>45-50</item>
        <item>50-55</item>
        
        <item>Above 55</item>
    </string-array>
    <string name="enable_gps_title">GPS</string>
    <string name="enable_gps_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="shopping_place_ignore">Swipe from right side to ignore business from shopping.</string>
    <string name="shopped">Shopped %s</string>
    <string name="biz_distance" formatted="false">%.2f %s</string>
    <string name="biz_distance_empty" formatted="false">%s %s</string>
    <string name="last_purchase" formatted="false">Last transaction for %s</string>
    <string name="empty_shopping_places">Not enough data to show shopping list. Please upload receipts.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_auth_msg">Logging in …</string>
    <string name="sign_up_msg">Signing up …</string>
    <string name="password_recovery_msg">Recovering password …</string>
    <string name="title_activity_main_page">MainMaterialDrawerActivity</string>
    <string name="tag_modify_note">Swipe from right side to edit or delete a tag.</string>
    <string name="home">Home</string>
    <string name="msg1"> Tapping \'Sign Up\' confirms that you agree to</string>
    <string name="msg2"><u>ReceiptApp Terms of Use</u></string>
    <string name="shopping_place">Shopping Places</string>
    <string name="tag_expense">Tag Expences</string>
    <string name="subscription">Subscription</string>
</resources>