<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Preferences">
        <SwitchPreference
            android:id="@+id/pref_wifi_sync"
            android:key="@string/key_pref_sync"
            android:summaryOff="@string/pref_sync_off"
            android:summaryOn="@string/pref_sync_on"
            android:title="@string/pref_sync"/>
        <SwitchPreference
            android:id="@+id/pref_wifi_notification"
            android:key="@string/key_pref_notification"
            android:summaryOff="@string/pref_notification_off"
            android:summaryOn="@string/pref_notification_on"
            android:title="@string/pref_notification"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="User Account">
        <com.receiptofi.checkout.views.LoginIdPreference
            android:id="@+id/pref_user_id"
            android:inputType="textEmailAddress"
            android:key="@string/key_pref_login_id"
            android:title="@string/pref_login_id"/>

        <com.receiptofi.checkout.views.PasswordPreference
            android:id="@+id/pref_password"
            android:inputType="textPassword"
            android:key="@string/key_pref_password"
            android:password="true"
            android:summary="@string/pref_password_text"
            android:title="@string/pref_password"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Data Sync Reset">
        <Preference
            android:title="Force Sync data"
            android:summary="Syncs data to latest available update.">
        </Preference>
        <Preference
            android:title="Delete data"
            android:summary="Deletes everything including user login information. This action will force user to logout of the app.">
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Others">
        <Preference
            android:title="Check Update"
            android:key= "preference_update">
        </Preference>
        <Preference
            android:title="About"
            android:key= "preference_about">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>