<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shopping_place"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/shopping_place" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_tag_expense"
            android:icon="@drawable/ic_tag"
            android:title="@string/tag_expense" />
        <item
            android:id="@+id/nav_billing_history"
            android:icon="@drawable/ic_history"
            android:title="@string/billing_history" />

        <item
            android:id="@+id/nav_app_subscription"
            android:icon="@drawable/ic_subscribe"
            android:title="@string/subscription" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_app_setting"
            android:icon="@drawable/ic_setting_dark"
            android:title="@string/action_settings" />
    </group>


</menu>
