<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/logintoolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/receipt_logo"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="26sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logintoolbar"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            style="@style/edit_text_blue_border"
            android:hint="@string/hint_email" />

        <EditText
            android:id="@+id/password"
            style="@style/edit_text_blue_border"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            style="@style/btnstyleauthentication"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_button_selector"
            android:enabled="false"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/forgot_password_button"
            style="@style/btnstyleauthentication"
            android:layout_marginTop="10dp"
            android:background="@color/app_light_blue_100"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Use Social Account"
            android:textColor="@color/app_light_blue_100"
            android:textSize="18sp" />

        <include layout="@layout/social_media_btn" />
    </LinearLayout>
</RelativeLayout>