<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBox
        android:id="@+id/receipt_action_recheck"
        style="@style/text_large_with_blue_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:scaleX="1.0"
        android:scaleY="1.0"
        android:text="@string/receipt_action_recheck"/>

    <TextView
        android:id="@+id/receipt_action_expense_tag_label"
        style="@style/text_receipt_action_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end|left|bottom"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/receipt_action_expense_tag_label"/>

    <ListView
        android:id="@+id/receipt_action_expense_tag_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="4"
        android:choiceMode="singleChoice"
        android:divider="@null"/>

    <TextView
        android:id="@+id/receipt_action_note_label"
        style="@style/text_receipt_action_label"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="end|left|bottom"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/receipt_action_note_label"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/receipt_action_note"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="3"
        android:background="@drawable/text_view_rounded_border"
        android:gravity="start|top"
        android:hint="@string/receipt_action_note_hint"
        android:maxLines="4"
        android:minLines="3"/>

</merge>