<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/passwordrecoverytoobar"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/receipt_logo"/>
    </android.support.v7.widget.Toolbar>

    <EditText
        style="@style/edit_text_blue_border"
        android:id="@+id/email" android:hint="@string/hint_email"></EditText>
    <Button
        style="@style/btnstyleauthentication" android:id="@+id/password_recovery_button"
        android:text="@string/password_recovery" android:background="@color/app_blue"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/password_recovery_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin_wide"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/app_theme_txt_color"
        android:visibility="gone"/>
</LinearLayout>